# qrfontain

./: README.md  gui_receiver.py  pyproject.toml
qrfontain/: __init__.py  __main__.py
tests/: test_qrfontain.py
